# actixdemo

./: .env  Cargo.toml  README.md  api.http
migrations/2019-07-17-074459_create_user_table/: up.sql
src/: errors.rs  main.rs  models.rs  schema.rs
src/web/: auth.rs
