[package]
name = "acitxdemo"
version = "0.1.0"
authors = ["zxk7516 <zxk7516@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "*"
actix-web = "1.0.3"
actix-http = "0.2"

diesel = { version = "1.*", features = ["postgres", "extras" ] }
r2d2 = "0.8.2"
dotenv = "0.9.0"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"

uuid = { version = "0.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

bcrypt = "*"

failure = "0.1.2"